# DesignPatterns

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
gtests/: CMakeLists.txt  test.cpp
include/Abstract Factory/: Buildings.h  BuildingsFactory.h
include/Composite/: BaseComponents.h  BaseCompositeComponents.h  Components.h  README.md
include/Dynamic Decorator/: Circle.h  ColorDecorator.h  README.md  Shape.h  ShapeDecorator.h
include/Static Decorator/: BaseCircle.h  README.md  StaticColorDecorator.h
include/Strategy/: Context.h  README.md  Strategy.h
src/: main.cpp
src/Composite/: BaseComponents.h  BaseCompositeComponents.h  Components.h  README.md
src/CompositePattern/: BaseComponents.h  BaseCompositeComponents.h  Components.h  README.md
src/Strategy/: Context.h  Strategy.h
